--- a/vzlom0805.html
+++ b/vzlom0805.html
@@ -107,7 +107,7 @@
 <p>&nbsp;В сообщении сообщается, что биржа столкнулась с нарушением правил безопасности, когда хакеры изъяли 7000 BTC (40 миллионов долларов) за одну транзакцию.</p>
 <p>Хэш Транзакция хака с участием около 7000 биткойнов: <a href="https://www.blockchain.com/btc/tx/e8b406091959700dbffcff30a60b190133721e5c39e89bb5fe23c5a554ab05ea" target="_blank" rel="nofollow">https://www.blockchain.com/btc/tx/e8b406091959700dbffcff30a60b190133721e5c39e89bb5fe23c5a554ab05ea</a></p>
 <p>В отчете говорится, что «хакер терпеливо ждал и выполнял хорошо организованные действия с помощью нескольких независимых учетных записей в наиболее подходящее время.</p>
-<p>&nbsp;«Транзакция организована таким образом, что она прошла все наши существующие проверки безопасности».</p>
+<blockquote>«Транзакция организована таким образом, что она прошла все наши существующие проверки безопасности».</blockquote>
 <p>Для них было прискорбно заблокировать вывод средств до его исполнения. Однако, когда снятие было выполнено, были вызваны различные тревоги в системе биржи, и в результате они немедленно остановили все изъятия средств.</p>
 <p class="vaz2">Хакер использовал различные методы в течение длительного периода времени, включая вирусы, фишинг и другие атаки, чтобы взломать кошелек Binance.</p>
 <p>Бинанс отследил кражу и сообщил, что эта атака затронула только одну учетную запись, и это горячий кошелек Бинанса. На его долю приходится около 2% биржевых биткойн-холдингов.</p>
