--- a/vzlom0805.html
+++ b/vzlom0805.html
@@ -97,6 +97,10 @@
 <p>Крупнейшая в мире биржа Binance была взломана. 07 мая 2019 года Binance потерпела крупномасштабное нарушение безопасности, когда хакерам удалось украсть около 7000 биткойнов, что стоит более 40 миллионов долларов США по текущей цене.</p>
 <p class="vaz">Взлом произошел в неподходящее время для биржи, и это, похоже, самый большой взлом на сегодняшний день. Тем не менее, компания обещает покрыть украденные средства, потерянные в результате взлома.</p>
 <p>Как и каждый раз, когда взламывают биржи, об этом было сообщено в Твиттере как «внеплановое обслуживание сервера».</p>
+<p>
+<a href="items/examples/hack.png" target="_blank">
+<img src="items/examples/hack.png" alt="hack"></a>
+</p>
 <p>Это встревожило многих пользователей Твиттера, и многие продолжали обмениваться сообщениями с генеральным директором Binance, спрашивая, действительно ли биржа взломана.</p>
 <h2>Начало взлома</h2>
 <p>Что ж, вскоре после этого основатель Binance сделал твит с сообщением</p>
@@ -137,10 +141,7 @@
 <p>Тем временем CZ (генеральный директор Binance) заявил, что они продолжат запланированный Twitter Ask Me Anything, как и планировалось.</p>
 
 
-<p>
-<a href="items/start/how/p0.png" target="_blank">
-<img src="items/start/how/p0.png" alt="p0"></a>
-</p>
+
 
 </div>
 </section>
