--- a/vzlom0805.html
+++ b/vzlom0805.html
@@ -109,7 +109,7 @@
 <p class="vaz">Согласно официальному заявлению генерального директора Binance Чанпэна Чжао:</p>
 <blockquote>«Было затронуто около 2% активов Binance в BTC».</blockquote>
 <p>&nbsp;В сообщении сообщается, что биржа столкнулась с нарушением правил безопасности, когда хакеры изъяли 7000 BTC (40 миллионов долларов) за одну транзакцию.</p>
-<p>Хэш Транзакция хака с участием около 7000 биткойнов: <a href="https://www.blockchain.com/btc/tx/e8b406091959700dbffcff30a60b190133721e5c39e89bb5fe23c5a554ab05ea" target="_blank" rel="nofollow">https://www.blockchain.com/btc/tx/e8b406091959700dbffcff30a60b190133721e5c39e89bb5fe23c5a554ab05ea</a></p>
+<p>Хэш Транзакция хака с участием около 7000 биткойнов: <a href="https://www.blockchain.com/btc/tx/e8b406091959700dbffcff30a60b190133721e5c39e89bb5fe23c5a554ab05ea" target="_blank" rel="nofollow">https://www.blockchain.com/btc/tx/e8b406091959<br>700dbffcff30a60b190133721e5c39e89bb5fe23c5a554ab05ea</a></p>
 <p>В отчете говорится, что «хакер терпеливо ждал и выполнял хорошо организованные действия с помощью нескольких независимых учетных записей в наиболее подходящее время.</p>
 <blockquote>«Транзакция организована таким образом, что она прошла все наши существующие проверки безопасности».</blockquote>
 <p>Для них было прискорбно заблокировать вывод средств до его исполнения. Однако, когда снятие было выполнено, были вызваны различные тревоги в системе биржи, и в результате они немедленно остановили все изъятия средств.</p>
